<resources>
    <string name="app_name">CarParking</string>
    <string name="homepage_search_ic">HomePage_Search_ic</string>
    <string name="car_no">Car No:</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="check_In">Check In</string>
    <string name="slot_Number">slot No.</string>
    <string name="check_Out">Check Out</string>
    <string name="check_Out_Amount">Amount</string>
    <string name="title_car_details">Car Details</string>
    <string name="title_check_out">Check Out</string>
    <string name="ok">OK</string>
    <string name="amount">Amount:</string>
    <string name="slot_number">Slot Number:</string>
    <string name="check_in">Check In:</string>
    <string name="check_out_mobile_number">Mobile Number:</string>
    <string name="check_out_car_no">Car No:</string>
    <string name="car_parking">Car Parking</string>
</resources>