<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/show_car_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/show_mobile_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            app:layout_constraintTop_toBottomOf="@+id/show_car_number"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/show_check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_In"
            app:layout_constraintTop_toBottomOf="@+id/show_mobile_number"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/show_slot_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slot_Number"
            app:layout_constraintTop_toBottomOf="@+id/show_check_in"
            app:layout_constraintStart_toStartOf="parent"
            />

        <Button
            android:id="@+id/check_out_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_Out"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>